# setup-macbook-playbook

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  requirements.txt  setup.yml
roles/caskapps/tasks/: main.yml
roles/databases/tasks/: main.yml
roles/devtools/: main.yml
roles/initialize/files/: install-homebrew.sh
roles/initialize/tasks/: main.yml
roles/languages/tasks/: main.yml
roles/macapps/tasks/: main.yml
roles/terminal/files/: Profiles.json
roles/terminal/tasks/: main.yml
roles/webdev/tasks/: main.yml
